--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Medium.ttf');
+  src: url('../src/assets/fonts/Poppins-Medium.ttf');
 }
 
 * {
